--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -395,6 +395,12 @@ a.button {
                 text-decoration: none;
             }
         }
+
+        .icon-facebook, .icon-instagram{
+            font-size: 1.55rem;
+            vertical-align: middle;
+            color: #fff;
+        }
     }
 
     .links{
