--- a/app/assets/subscription-succes.320-767.css
+++ b/app/assets/subscription-succes.320-767.css
@@ -52,7 +52,10 @@
       #content .social-box .social-buttons {
         margin-bottom: 7.375rem; }
         #content .social-box .social-buttons a {
-          max-width: 100% !important; }
+          max-width: 100% !important;
+          padding: 0.75rem 0 0.75rem 3.6rem !important; }
+          #content .social-box .social-buttons a .icon-instagram, #content .social-box .social-buttons a .icon-facebook {
+            left: 1.4rem !important; }
   #footer h100
 .socials {
     margin-top: 1.125rem !important; }
