--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -18,6 +18,55 @@
   src: url("../fonts/Roboto-Regular.eot?iefix") format("eot"), url("../fonts/Roboto-Regular.woff") format("woff"), url("../ffonts/Roboto-Regular.ttf") format("truetype");
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'fontello';
+  src: url("../fonts/fontello.eot?34276115");
+  src: url("../fonts/fontello.eot?34276115#iefix") format("embedded-opentype"), url("../fonts/fontello.woff2?34276115") format("woff2"), url("../fonts/fontello.woff?34276115") format("woff"), url("../fonts/fontello.ttf?34276115") format("truetype"), url("../fonts/fontello.svg?34276115#fontello") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"]:before,
+[class*=" icon-"]:before {
+  font-family: "fontello";
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1rem;
+  margin-right: .2rem;
+  text-align: center;
+  /* opacity: .8; */
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
+  /* fix buttons height, for twitter bootstrap */
+  line-height: 1rem;
+  /* Animation center compensation - margins should be symmetric */
+  /* remove if not needed */
+  margin-left: .2rem;
+  /* you can be more comfortable with increased icons size */
+  /* font-size: 120%; */
+  /* Font smoothing. That was taken from TWBS */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  /* Uncomment for 3D effect */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+}
+
+.icon-facebook:before {
+  content: '\e800';
+}
+
+/* '' */
+
+.icon-instagram:before {
+  content: '\e801';
+}
+
+/* '' */
 @media (min-width: 1024px) and (max-width: 1279px) {
   .jcc {
     -webkit-box-pack: center;
@@ -1127,6 +1176,13 @@ a.button:hover {
   text-decoration: none;
 }
 
+#footer .socials .icon-facebook,
+#footer .socials .icon-instagram {
+  font-size: 1.55rem;
+  vertical-align: middle;
+  color: #fff;
+}
+
 #footer .links a {
   color: #7f7f7f;
   font-size: 1rem;
@@ -1239,6 +1295,12 @@ a.button:hover {
 
   #content .social-box .social-buttons a {
     max-width: 100% !important;
+    padding: 0.75rem 0 0.75rem 3.6rem !important;
+  }
+
+  #content .social-box .social-buttons a .icon-instagram,
+  #content .social-box .social-buttons a .icon-facebook {
+    left: 1.4rem !important;
   }
 
   #footer h100
@@ -1406,6 +1468,18 @@ a.button:hover {
   margin-top: 1.5625rem;
 }
 
+#content .social-box .social-buttons .icon-instagram,
+#content .social-box .social-buttons .icon-facebook {
+  font-size: 1.5rem;
+  position: absolute;
+  top: 0.625rem;
+  left: 0.6875rem;
+}
+
+#content .social-box .social-buttons .icon-instagram {
+  left: 0.68rem;
+}
+
 #content .social-box .social-buttons a {
   position: relative;
   border-radius: 0.625rem;
@@ -1416,16 +1490,7 @@ a.button:hover {
   line-height: 1.3125rem;
   color: #fff;
   font-family: 'Roboto-bold';
-  padding: 0.75rem 0 0.75rem 2.6875rem;
-}
-
-#content .social-box .social-buttons a::before {
-  content: '';
-  position: absolute;
-  width: 1.625rem;
-  height: 1.5625rem;
-  top: 0.5625rem;
-  left: 0.6875rem;
+  padding: 0.75rem 0 0.75rem 2.8875rem;
 }
 
 #content .social-box .social-buttons a:hover {
@@ -1435,10 +1500,6 @@ a.button:hover {
 
 #content .social-box .social-buttons a.facebook {
   background: #3C5997;
-}
-
-#content .social-box .social-buttons a.facebook::before {
-  background: url("../images/facebook.svg");
 }
 
 #content .social-box .social-buttons a.instagram {
@@ -1451,8 +1512,4 @@ a.button:hover {
   /* IE10+ */
   background-image: repeating-radial-gradient(ellipse farthest-corner at left bottom, #ee5432 0%, #dc254e 34.8%, #b5137f 57.9%, #6523cc 100%);
   background-image: -ms-repeating-radial-gradient(left bottom, ellipse farthest-corner, #ee5432 0%, #dc254e 34.8%, #b5137f 57.9%, #6523cc 100%);
-}
-
-#content .social-box .social-buttons a.instagram::before {
-  background: url("../images/instagram.svg");
 }
