--- a/app/scss/fonts.scss
+++ b/app/scss/fonts.scss
@@ -22,3 +22,53 @@
     url('../ffonts/Roboto-Regular.ttf') format('truetype');
     font-style: normal;
 }
+@font-face {
+    font-family: 'fontello';
+    src: url('../fonts/fontello.eot?34276115');
+    src: url('../fonts/fontello.eot?34276115#iefix') format('embedded-opentype'),
+         url('../fonts/fontello.woff2?34276115') format('woff2'),
+         url('../fonts/fontello.woff?34276115') format('woff'),
+         url('../fonts/fontello.ttf?34276115') format('truetype'),
+         url('../fonts/fontello.svg?34276115#fontello') format('svg');
+    font-weight: normal;
+    font-style: normal;
+  }
+
+  
+ [class^="icon-"]:before, [class*=" icon-"]:before {
+    font-family: "fontello";
+    font-style: normal;
+    font-weight: normal;
+    speak: none;
+   
+    display: inline-block;
+    text-decoration: inherit;
+    width: 1rem;
+    margin-right: .2rem;
+    text-align: center;
+    /* opacity: .8; */
+   
+    /* For safety - reset parent styles, that can break glyph codes*/
+    font-variant: normal;
+    text-transform: none;
+   
+    /* fix buttons height, for twitter bootstrap */
+    line-height: 1rem;
+   
+    /* Animation center compensation - margins should be symmetric */
+    /* remove if not needed */
+    margin-left: .2rem;
+   
+    /* you can be more comfortable with increased icons size */
+    /* font-size: 120%; */
+   
+    /* Font smoothing. That was taken from TWBS */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+   
+    /* Uncomment for 3D effect */
+    /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+  }
+   
+  .icon-facebook:before { content: '\e800'; } /* '' */
+  .icon-instagram:before { content: '\e801'; } /* '' */ 
