--- a/app/scss/subscription-succes.320-767.scss
+++ b/app/scss/subscription-succes.320-767.scss
@@ -88,6 +88,12 @@
 
                 a{
                     max-width: 100% !important;
+                    padding: 0.75rem 0 0.75rem 3.6rem !important;
+
+                    .icon-instagram, .icon-facebook{
+                        left: 1.4rem !important;
+                    }
+        
                 }
             }
         }
