--- a/app/scss/main.1024-1279.scss
+++ b/app/scss/main.1024-1279.scss
@@ -83,6 +83,11 @@
         .rectangle{
             height: 30rem !important;
         }
+
+        .rectangle-edge{
+            height: 30rem !important;
+            background-size: cover !important;
+        }
         
         .justify-content-between{
             justify-content: center !important;
