--- a/app/scss/main.1280-1400.scss
+++ b/app/scss/main.1280-1400.scss
@@ -33,6 +33,12 @@
             margin-top: -8.75rem !important;
         }
 
+        .rectangle-edge{
+            background-size:cover !important;
+            height: 35rem !important;
+            background-position-x: -110px !important;
+        }
+
         .second-part{
             margin-top: -14.375rem !important;
 
