--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -88,86 +88,93 @@ a.button {
     -webkit-box-shadow: 0rem 0.03125rem 0rem #000000;
             box-shadow: 0rem 0.03125rem 0rem #000000; }
 
-#how_it_works .first-part .image-box {
-  margin-top: 4.6875rem; }
-  #how_it_works .first-part .image-box .author {
-    margin-top: 0.8125rem; }
-    #how_it_works .first-part .image-box .author img {
-      width: 1.4375rem;
-      height: 1.4375rem; }
-    #how_it_works .first-part .image-box .author .name {
-      font-family: 'Roboto-bold';
-      margin-left: 0.375rem;
-      font-size: 0.875rem;
-      letter-spacing: 0.009rem;
-      line-height: 0.900rem;
-      color: #000; }
-
-#how_it_works .rectangle {
-  margin-top: -13rem;
-  width: 100%;
-  height: 37.5rem;
-  background: #CCFF00;
-  -webkit-clip-path: polygon(0 50%, 100% 0%, 100% 50%, 0 100%);
-          clip-path: polygon(0 50%, 100% 0%, 100% 50%, 0 100%); }
-
-#how_it_works .second-part {
-  margin-top: -16.5625rem;
-  margin-bottom: 7.1875rem; }
-  #how_it_works .second-part .image-box {
-    position: relative; }
-    #how_it_works .second-part .image-box img {
-      width: 19.125rem;
-      height: 33.9375rem;
-      border: 0.0625rem solid #DDDDDD; }
-    #how_it_works .second-part .image-box .slider {
-      position: absolute;
-      top: 0;
-      left: 0.1875rem;
-      width: 18.75rem; }
-      #how_it_works .second-part .image-box .slider .slider-nav {
-        position: relative;
-        top: 9.0625rem;
-        text-align: center;
-        color: #9b9b9b; }
-        #how_it_works .second-part .image-box .slider .slider-nav p.slider-nav-link {
-          font-size: 0.70rem;
-          font-family: 'Roboto-bold';
-          text-transform: uppercase;
-          margin-right: 0.75rem;
-          display: inline-block; }
-          #how_it_works .second-part .image-box .slider .slider-nav p.slider-nav-link:hover {
-            text-decoration: none;
-            cursor: pointer;
+#how_it_works {
+  position: relative; }
+  #how_it_works .first-part .image-box {
+    margin-top: 4.6875rem; }
+    #how_it_works .first-part .image-box .author {
+      margin-top: 0.8125rem; }
+      #how_it_works .first-part .image-box .author img {
+        width: 1.4375rem;
+        height: 1.4375rem; }
+      #how_it_works .first-part .image-box .author .name {
+        font-family: 'Roboto-bold';
+        margin-left: 0.375rem;
+        font-size: 0.875rem;
+        letter-spacing: 0.009rem;
+        line-height: 0.900rem;
+        color: #000; }
+  #how_it_works .rectangle {
+    margin-top: -13rem;
+    width: 100%;
+    height: 37.5rem;
+    background: #CCFF00;
+    -webkit-clip-path: polygon(0 50%, 100% 0%, 100% 50%, 0 100%);
+            clip-path: polygon(0 50%, 100% 0%, 100% 50%, 0 100%); }
+  #how_it_works .rectangle-edge {
+    margin-top: -13rem;
+    width: 100%;
+    height: 37.5rem;
+    background: url(../images/rectangle.png) no-repeat; }
+  #how_it_works .second-part {
+    margin-top: -16.5625rem;
+    margin-bottom: 7.1875rem; }
+    #how_it_works .second-part .image-box {
+      position: relative; }
+      #how_it_works .second-part .image-box img {
+        width: 19.125rem;
+        height: 33.9375rem;
+        border: 0.0625rem solid #DDDDDD; }
+      #how_it_works .second-part .image-box .slider {
+        position: absolute;
+        top: 0;
+        left: 0.1875rem;
+        width: 18.75rem; }
+        #how_it_works .second-part .image-box .slider .slider-nav {
+          position: relative;
+          top: 9.0625rem;
+          text-align: center;
+          color: #9b9b9b; }
+          #how_it_works .second-part .image-box .slider .slider-nav p.slider-nav-link {
+            font-size: 0.70rem;
+            font-family: 'Roboto-bold';
+            text-transform: uppercase;
+            margin-right: 0.75rem;
+            display: inline-block; }
+            #how_it_works .second-part .image-box .slider .slider-nav p.slider-nav-link:hover {
+              text-decoration: none;
+              cursor: pointer;
+              color: #000; }
+          #how_it_works .second-part .image-box .slider .slider-nav .active {
+            border-bottom: 0.125rem solid #000;
             color: #000; }
-        #how_it_works .second-part .image-box .slider .slider-nav .active {
-          border-bottom: 0.125rem solid #000;
-          color: #000; }
-      #how_it_works .second-part .image-box .slider .slides-box {
-        height: 22.5rem;
-        width: 100%;
-        background: #fff;
-        position: relative;
-        top: 8.75rem;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: row;
-                flex-direction: row;
-        -ms-flex-wrap: nowrap;
-            flex-wrap: nowrap;
-        overflow: hidden; }
-        #how_it_works .second-part .image-box .slider .slides-box .slide img {
-          width: 18.75rem;
-          height: 100%;
-          border: none; }
-  #how_it_works .second-part .description-box {
-    margin-top: 12.5rem;
-    padding-left: 1.875rem; }
-    #how_it_works .second-part .description-box .text {
-      max-width: 410px; }
+        #how_it_works .second-part .image-box .slider .slides-box {
+          height: 22.5rem;
+          width: 100%;
+          background: #fff;
+          position: relative;
+          top: 8.75rem;
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-orient: horizontal;
+          -webkit-box-direction: normal;
+              -ms-flex-direction: row;
+                  flex-direction: row;
+          -ms-flex-wrap: nowrap;
+              flex-wrap: nowrap;
+          overflow: hidden; }
+          #how_it_works .second-part .image-box .slider .slides-box .slide img {
+            width: 18.75rem;
+            height: 100%;
+            border: none; }
+    #how_it_works .second-part .description-box {
+      margin-top: 12.5rem;
+      padding-left: 1.875rem; }
+      #how_it_works .second-part .description-box .text {
+        max-width: 410px; }
+  #how_it_works .margin-top {
+    margin-top: -10.3125rem !important; }
 
 #progress {
   background-color: #000;
