--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -148,6 +148,11 @@
     height: 30rem !important;
   }
 
+  #how_it_works .rectangle-edge {
+    height: 30rem !important;
+    background-size: cover !important;
+  }
+
   #how_it_works .justify-content-between {
     -webkit-box-pack: center !important;
     -ms-flex-pack: center !important;
@@ -311,6 +316,12 @@
     clip-path: polygon(0 41%, 100% 1%, 100% 57%, 0 96%) !important;
     height: 31.25rem !important;
     margin-top: -8.75rem !important;
+  }
+
+  #how_it_works .rectangle-edge {
+    background-size: cover !important;
+    height: 35rem !important;
+    background-position-x: -110px !important;
   }
 
   #how_it_works .second-part {
@@ -904,6 +915,10 @@ a.button:hover {
   box-shadow: 0rem 0.03125rem 0rem #000000;
 }
 
+#how_it_works {
+  position: relative;
+}
+
 #how_it_works .first-part .image-box {
   margin-top: 4.6875rem;
 }
@@ -933,6 +948,13 @@ a.button:hover {
   background: #CCFF00;
   -webkit-clip-path: polygon(0 50%, 100% 0%, 100% 50%, 0 100%);
   clip-path: polygon(0 50%, 100% 0%, 100% 50%, 0 100%);
+}
+
+#how_it_works .rectangle-edge {
+  margin-top: -13rem;
+  width: 100%;
+  height: 37.5rem;
+  background: url("../images/rectangle.png") no-repeat;
 }
 
 #how_it_works .second-part {
@@ -1014,6 +1036,10 @@ a.button:hover {
 
 #how_it_works .second-part .description-box .text {
   max-width: 410px;
+}
+
+#how_it_works .margin-top {
+  margin-top: -10.3125rem !important;
 }
 
 #progress {
