--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -124,7 +124,7 @@ a.button {
 }
 
 #how_it_works{
-    
+    position: relative;
     .first-part{
 
         .image-box{
@@ -157,6 +157,13 @@ a.button {
         height: 37.5rem;
         background: #CCFF00;
         clip-path: polygon(0 50%, 100% 0%, 100% 50%, 0 100%);
+    }
+
+    .rectangle-edge{
+        margin-top: -13rem;
+        width: 100%;
+        height: 37.5rem;
+        background: url(../images/rectangle.png) no-repeat;
     }
 
     .second-part{
@@ -237,6 +244,10 @@ a.button {
                 max-width: 410px;
             }
         }
+    }
+
+    .margin-top{
+        margin-top: -10.3125rem !important;
     }
 }
 
